<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.greact</groupId>
    <artifactId>greact-plugin</artifactId>
    <version>0.0.1</version>
    <properties>
        <java.version.release>14</java.version.release>
        <java.version>1.${java.version.release}</java.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
<!--                    <release>${java.version.release}</release>-->
<!--                    <compilerVersion>${java.version}</compilerVersion>-->
<!--                    <source>${java.version}</source>-->
<!--                    <target>${java.version}</target>-->
                    <source>14</source>
                    <target>14</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <compilerArg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</compilerArg>
                        <compilerArg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</compilerArg>
                        <compilerArg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</compilerArg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>